java9 support for dynamic instrumentation